fix spacing_padding_hp

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+body {
+  overflow-x: hidden;
+}
+
+
+
+
 html {
 height:100.1%;
 }
@@ -42,7 +49,7 @@ height:100.1%;
   margin-top: 40px;
   max-width: 28%; 
   height: auto; /* Maintain the aspect ratio */
-  margin-left: 70vh;
+;
 }
 
 
@@ -53,25 +60,26 @@ height:100.1%;
 .row {
   display: flex;
   flex-wrap: wrap;
-  padding: 50px 4px;
+ justify-content: center; /* Center the columns horizontally */
 }
 
 
 /* Create two equal columns that sits next to each other */
 .column {
   flex: 1;
-  padding: 8px 4px;
+
   display: flex;
   flex-direction: column;
   align-items: center; /* Center items horizontally */
+  padding: 0 20px;
 }
 
 .column img {
   width: 100%;
   max-width: 100%; /* Ensure the image does not exceed the column's width */
   margin-top: 20px;
-  margin-left: 100px;
-  margin-right: 100px;
+
+
   align-self: center; /* Center the image within the column vertically */
 }
 
